@startuml
!ifndef RB_UI
!define RB_UI


!include register.puml


skinparam groupInheritance 2
package rb <<Render Backend>> {

    package ui <<User interface>>{
        package elements{
            abstract class UIElement
            abstract class LinearLayout
            class VBox
            class HBox
            class Text
            class Ractangle
            class Sprite
        }
        class UIFactory
        dataclass Node
        class Parser
        enum Token
        class Tokenizer
    }
}


serialized_configuration --> rb.ui.Tokenizer #line:green;text:green : consumed by
rb.ui.Tokenizer --> rb.ui.Token #line:green;text:green : make
rb.ui.Token --> rb.ui.Parser #line:green;text:green : consumed by
rb.ui.Parser --> rb.ui.Node #line:green;text:green : make
rb.ui.Node --> rb.ui.UIFactory #line:green;text:green : consumed by
rb.ui.UIFactory --> rb.ui.elements.UIElement #line:green;text:green : make
rb.ui.UIFactory --> rb.rgst.AssetRegistry #line:green;text:green : requests asset

rb.ui.elements.UIElement <|-- rb.ui.elements.LinearLayout
rb.ui.elements.UIElement <|-- rb.ui.elements.Text
rb.ui.elements.UIElement <|-- rb.ui.elements.Ractangle
rb.ui.elements.UIElement <|-- rb.ui.elements.Sprite

rb.ui.elements.LinearLayout <|.. rb.ui.elements.VBox
rb.ui.elements.LinearLayout <|.. rb.ui.elements.HBox

rb.assets.AssetHandle --* rb.ui.elements.Text
rb.assets.AssetHandle --* rb.ui.elements.Sprite

!ifdef SHOW_COMMENTS

package rb {
    package ui {
        package elements{
            note left of UIElement
                It is a node of the interface elements tree.
            end note
            note left of LinearLayout
                All branches will be in one row
            end note
        }

        note left of Tokenizer
            It parses the file and breaks it down into tokens
        end note
        note left of Parser
            Passes tokens and collects tree nodes from them
        end note
        note left of UIFactory
            Breaks down node by node, filling in the user interface tree
        end note
    }
}

!endif

!endif
@enduml